Winx mod/.gradle/gradle.log
#################################################
         ForgeGradle 2.0-SNAPSHOT        
  https://github.com/MinecraftForge/ForgeGradle  
#################################################
               Powered by MCP 9.10               
             http://modcoderpack.com             
         by: Searge, ProfMobius, Fesh0r,         
         R4wk, ZeuX, IngisKahn, bspkrs           
#################################################
:deobfCompileDummyTask
:deobfProvidedDummyTask
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava UP-TO-DATE
:compileJavawarning: [options] bootstrap class path not set in conjunction with -source 1.6
C:\Users\danda\workspace\fantasy\Winx mod\build\sources\main\java\cz\mc_Dandy\winx\items\ModItems3.java:3: error: package cz.mc_Dandy.fantasyCore.items does not exist
import cz.mc_Dandy.fantasyCore.items.ModItems;
                                    ^
C:\Users\danda\workspace\fantasy\Winx mod\build\sources\main\java\cz\mc_Dandy\winx\items\ModItems3.java:18: error: cannot find symbol
		GameRegistry.addShapelessRecipe(new ItemStack(ModItems3.FiaryDust, 10), new Object[] { ModItems.Magic_Powder,
		                                                                                       ^
  symbol:   variable ModItems
  location: class ModItems3
2 errors
1 warning
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 15.982 secs
